<resources>
    <string name="app_name">All in One Fitness</string>
    <string name="sign_in">Sign In</string>
    <string name="Submit">Submit</string>
    <string name="height_text">Enter Height:</string>
    <string name="weight_text">Enter Weight:</string>
    <string name="profile">Tell Us about Yourself</string>
    <string name="name">Enter Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="goals">Tell us what you want to achieve</string>
    <string name="height_suggest">0ft 0in</string>
    <string name="weight_suggest">0 lb</string>
    <string name="goals_text">Enter Goals:</string>
    <string name="Submit_button">Submit</string>
    <string name="launch_survey">Launch Survey</string>
    <string name="loading">Loading</string>
    <string name="gender">Gender:</string>
    <string name="sign_out">Sign Out</string>
    <string name="survey_page">Survey Page</string>
    <string name="all_in_one_fitness">All in One Fitness</string>
    <string name="survey">Survey</string>
    <string name="title_activity_hyperextension_workout">HyperextensionWorkout</string>
    <string name="title_activity_maps">Gyms Near You</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>