<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/surveylayout"
    android:background="@drawable/gradient_list">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fitsSystemWindows="false"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:singleLine="true"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/profileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7CD8D7D7"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="#000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/gender"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:text="@string/male"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:text="@string/female"
                    android:textColor="@android:color/black" />
            </RadioGroup>


            <TextView
                android:id="@+id/height_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:singleLine="true"
                android:text="@string/height_text"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
    <!---
                <EditText
                    android:id="@+id/height_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/common_google_signin_btn_text_light_disabled"
                    android:hint="@string/height_suggest"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textSize="18sp" />
                    -->
                <Spinner
                    android:id="@+id/heightSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/weight_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_text"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <!---
                <EditText
                    android:id="@+id/weight_edit"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/common_google_signin_btn_text_light_disabled"
                    android:hint="@string/weight_suggest"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textSize="18sp" />
                    -->
                <Spinner
                    android:id="@+id/weightSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/goals_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/goals_text"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/goals_edit"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    android:autofillHints=""
                    android:backgroundTint="#7CD8D7D7"
                    android:ems="10"
                    android:hint="@string/goals"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#88bdbc"
                android:text="@string/Submit_button" />

        </LinearLayout>
    </ScrollView>

